style(navigation bar): fix text wrap issue in mobile view

--- a/home-media-viewer/src/styles/hmv.module.scss
+++ b/home-media-viewer/src/styles/hmv.module.scss
@@ -91,6 +91,10 @@ $appTextColorAlternative: #2d9649;
         justify-content: flex-end;
     }
 
+    > div {
+        min-width: 40vw;
+    }
+
     > div > * {
         display: inline-block;
         height: 38px;
